--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "node ace serve --watch",
     "build": "node ace build --production --ignore-ts-errors",
-    "start": "node build/server.js",
+    "start": "node ./build/server.js",
     "lint": "eslint . --ext=.ts",
     "format": "prettier --write ."
   },
