--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "engines": {
-    "node": "14.19"
+    "node": "14.x"
   },
   "scripts": {
     "dev": "node ace serve --watch",
